// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel component renders correctly 1`] = `
<styled.div
  height="auto"
  width="auto"
>
  MyPanel
</styled.div>
`;

exports[`Panel component renders correctly with height 1`] = `
<styled.div
  height="200px"
  width="auto"
>
  MyPanel
</styled.div>
`;

exports[`Panel component renders correctly with width 1`] = `
<styled.div
  height="auto"
  width="200px"
>
  MyPanel
</styled.div>
`;
